<resources>
    <string name="app_name">Mabe</string>
    <string name="drawer_wellcome">User</string>
    <string name="evidence_title">Type of Evidence</string>
    <string name="shelf">Shelf</string>
    <string name="product">Product</string>
    <string name="expired">Expired</string>
    <string name="additional">Additional Exposed</string>
    <string name="store">Store</string>
    <string name="other">Other</string>
    <string name="button_continue">Continue</string>
    <string name="bayer" translatable="false">Bayer</string>
    <string name="eucerin" translatable="false">Eucerin</string>
    <string name="johnsonandJohnson" translatable="false">JohnsonandJohnson</string>
    <string name="pfizer" translatable="false">Pfizer</string>
    <string name="roche" translatable="false">Bayer</string>
    <string name="vick" translatable="false">Vick</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="print">Print</string>
    <string name="log_out">Log out?</string>
    <string name="see_traffic">See traffic</string>
    <string name="no_notifications">You don\'t have notifications</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="delete">Delete</string>
    <string name="date">Date</string>
    <string name="pay">Pay</string>
    <string name="folio">Folio</string>
    <string name="log_in">Log In</string>
    <string name="password">Password</string>
    <string name="user">User</string>
    <string name="logging_in">Logging in…</string>
    <string name="location_unavailable">Unable To Get Your Location</string>
    <string name="units_celsius">ºC</string>
    <string name="units_fahrenheit">ºF</string>
    <string name="units_mph">mph</string>
    <string name="units_kph">km/h</string>
    <string name="weather_unavailable">Weather information not available</string>
    <string name="add_note">Add New Note</string>
    <string name="no_notes">You Don\'t Have Notes</string>
    <string name="edit_note">Edit Note</string>
    <string name="note_deleted">Note deleted!</string>
    <string name="product_price_indicator">Price:</string>
    <string name="product_public_price_indicator">Cost</string>
    <string name="product_stock_indicator">Stock</string>
    <string name="product_tax_indicator">Tax</string>
    <string name="product_tax_indicator_with_symbol">Tax (%)</string>
    <string name="product_stock_central_indicator">Stock\n central</string>
    <string name="product_search_hint">Search Product…</string>
    <string name="product_photos_hint">Photos</string>
    <string name="select_category">Select a Category</string>
    <string name="select">Select</string>
    <string name="add_category">Add Category</string>
    <string name="cant_find">Can\'t Find It?</string>
    <string name="product_deleted">Product Deleted!</string>
    <string name="product_brand_hint">Brand</string>
    <string name="product_name_hint">Product Name</string>
    <string name="product_code_hint">Insert Code Or Scan It</string>
    <string name="product_description_hint">Product Description</string>
    <string name="product_saved">Product Saved</string>
    <string name="main_photo_selector">Is This The Main Photo?</string>
    <string name="max_photos_number_reached">You Can Only Add 5 Photos</string>
    <string name="product_boxes_lbl">Boxes</string>
    <string name="product_pieces_lbl">Pieces</string>
    <string name="product_total_lbl">Total</string>
    <string name="loading_data">Loading data…</string>
    <string name="receipt_total">Total</string>
    <string name="receipt_subtotal">Subtotal</string>
    <string name="receipt_taxes">Taxes</string>
    <string name="receipt_number">Receipt #</string>
    <string name="receipt_issued_by">Issued by:</string>
    <string name="receipt_to">To:</string>
    <string name="receipt_header_list_quantity">Quantity</string>
    <string name="receipt_header_list_description">Description</string>
    <string name="receipt_header_list_price">Unit price</string>
    <string name="receipt_header_list_amount">Amount</string>
    <string name="receipt_signature_hint">Name And Signature</string>
    <string name="signature_hint">Sign Here</string>
    <string name="receipt_receiver">Receiver</string>
    <string name="receipt_issuing">Issuing</string>
    <string name="receipt_saved">Receipt Saved</string>
    <string name="receipt_send">Send</string>
    <string name="receipt_print">Print Ticket</string>
    <string name="amount_playable">Amount Payable</string>
    <string name="payment_method">Cashing</string>
    <string name="language">Language</string>
    <string name="spanish_label">Spanish</string>
    <string name="english_label">English</string>
    <string name="client_type_lbl">Client type</string>
    <string name="client_type_prompt">Client type</string>
    <string name="client_type_public">General</string>
    <string name="client_type_facturable">Facturable</string>
    <string name="client_name_hint">Name</string>
    <string name="client_last_name1_hint">Last Name 1</string>
    <string name="client_last_name2_hint">Last Name 2</string>
    <string name="client_rfc_hint">RFC</string>
    <string name="client_curp_hint">CURP</string>
    <string name="client_phone_hint">Phone Number</string>
    <string name="client_latitude_hint">Latitude</string>
    <string name="client_longitude_hint">Longitude</string>
    <string name="client_email_hint">Email Address</string>
    <string name="client_address_street_hint">Street</string>
    <string name="client_address_num_ext_hint">Ext. Num</string>
    <string name="client_address_num_int_hint">Int. Num</string>
    <string name="client_address_zip_code_hint">Zip Code</string>
    <string name="client_address_2_hint">Address 2</string>
    <string name="client_address_locality">Locality</string>
    <string name="client_address_state">State</string>
    <string name="client_address_city">City</string>
    <string name="client_address_district">District</string>
    <string name="client_comments_hint">Add a Comment</string>
    <string name="client_division_hint">Division</string>
    <string name="client_channel_hint">Channel</string>
    <string name="client">Client</string>
    <string name="contact">Contact</string>
    <string name="address">Address</string>
    <string name="comments">Comments</string>
    <string name="client_saved">Client saved</string>
    <string name="generic_server_down">No Response From Server</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="generic_error">Generic Error</string>
    <string name="error_empty_field">Complete This Field</string>
    <string name="error_invalid_curp">CURP Field Invalid</string>
    <string name="error_invalid_rfc">RFC Field Invalid</string>
    <string name="error_invalid_tax_value">Tax Is Too High</string>
    <string name="error_existing_barcode">The Code Is Already Registered</string>
    <string name="error_invalid_email_address">Verify The Email Address</string>
    <string name="error_invalid_zip_code">Verify The Zip Code</string>
    <string name="error_no_state">Select a State</string>
    <string name="error_no_city">Select a City</string>
    <string-array name="inventory_titles">
        <item>Entries</item>
        <item>Outputs</item>
    </string-array>
    <string-array name="drawer_titles">
        <item>Home</item>
        <item>Service Plan</item>
        <item>Synchronize</item>
        <item>Payments</item>
        <item>Forms</item>
        <item>Visits</item>
        <item>Spare Parts</item>
        <item>Inventory</item>
        <item>Add Customer Data</item>
        <item>Location</item>
        <item>Products</item>
        <item>Surveys</item>
        <item>Documents</item>
        <item>Prices</item>
        <item>Fueling</item>
        <item>Settings</item>
        <item>Synchronize app</item>
        <item>Log out</item>
    </string-array>
    <string-array name="weather_conditions">
        <item>	Tornado	</item>
        <item>	Tropical Storm	</item>
        <item>	Hurricane	</item>
        <item>	Severe Thunderstorms	</item>
        <item>	Thunderstorms	</item>
        <item>	Mixed Rain And Snow	</item>
        <item>	Mixed Rain And Sleet	</item>
        <item>	Mixed Snow And Sleet	</item>
        <item>	Freezing Drizzle	</item>
        <item>	Drizzle	</item>
        <item>	Freezing Rain	</item>
        <item>	Showers	</item>
        <item>	Showers	</item>
        <item>	Snow Flurries	</item>
        <item>	Light Snow Showers	</item>
        <item>	Blowing Snow	</item>
        <item>	Snow	</item>
        <item>	Hail	</item>
        <item>	Sleet	</item>
        <item>	Dust	</item>
        <item>	Foggy	</item>
        <item>	Haze	</item>
        <item>	Smoky	</item>
        <item>	Blustery	</item>
        <item>	Windy	</item>
        <item>	Cold	</item>
        <item>	Cloudy	</item>
        <item>	Mostly Cloudy (Night)	</item>
        <item>	Mostly Cloudy (Day)	</item>
        <item>	Partly Cloudy (Night)	</item>
        <item>	Partly Cloudy (Day)	</item>
        <item>	Clear (Night)	</item>
        <item>	Sunny	</item>
        <item>	Fair (Night)	</item>
        <item>	Fair (Day)	</item>
        <item>	Mixed Rain And Hail	</item>
        <item>	Hot	</item>
        <item>	Isolated Thunderstorms	</item>
        <item>	Scattered Thunderstorms	</item>
        <item>	Scattered Thunderstorms	</item>
        <item>	Scattered Showers	</item>
        <item>	Heavy Snow	</item>
        <item>	Scattered Snow Showers	</item>
        <item>	Heavy Snow	</item>
        <item>	Partly Cloudy	</item>
        <item>	Thundershowers	</item>
        <item>	Snow Showers	</item>
        <item>	Isolated Thundershowers	</item>
    </string-array>
    <string name="preparation">Preparation For The Visit</string>
    <string name="capturing_inventories">Capturing Inventories</string>
    <string name="order">Service Order</string>
    <string name="payment_record">Payments</string>
    <string name="order_cancellation">Order Cancellation</string>
    <string name="refund">Part Change</string>
    <string name="refund_cancellation">Part Change Cancellation</string>
    <string name="return_order">Return</string>
    <string name="not_sale">Not Sale</string>
    <string name="authorize_visit">Authorize End Service</string>
    <string name="end_visit">Closure Order</string>
    <string name="pre_orders">Pre-orders</string>
    <string name="historic_orders">Orders Historical</string>
    <string name="extra_tasks">Generic Tasks</string>
    <string name="wp_customer" > Customer </string>
    <string name="wp_jde_code" ># Service Order</string>
    <string name="wp_address"  > Address  </string>
    <string name="wp_email"    > E-mail </string>
    <string name="wp_telephone"> Telephone </string>
    <string name="wp_openingt" > Opening time </string>
    <string name="wp_closingt" > Closing time </string>
    <string name="wp_start"    > Initiate </string>
    <string name="wp_continue" > Continue </string>
    <string name="wp_closed"   > Ended </string>
    <string name="wp_reassign" > Reassign</string>
    <string name="wp_no_gps_info"> PDV location information no available</string>
    <string name="r_returns">Returns:</string>
    <string name="r_product">Product:</string>
    <string name="r_quantity">Quantity:</string>
    <string name="r_unit_of_measurement">Unit Of Measurement:</string>
    <string name="r_boxes">Boxes:</string>
    <string name="r_bottles">Bottles:</string>
    <string name="r_reason">Reason:</string>
    <string name="r_expiry_date">Expiry Date:</string>
    <string name="r_batch">Batch:</string>
    <string name="r_capture_evidence">Capture Evidence</string>
    <string name="r_save_return">Save Return</string>
</resources>