<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="@dimen/dialog_width"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#d0d8d8">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingRight="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_vertical_margin"
        android:text="@string/select_category"
        android:textSize="@dimen/sizeNormalText"
        android:textColor="@color/app_color"
        android:layout_marginBottom="10dp"
        android:focusable="true"
        android:focusableInTouchMode="true"/>

    <LinearLayout
        android:id="@+id/dialog_frame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical">

        <Spinner
            android:id="@+id/parent_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_add_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/cant_find"
            android:textSize="@dimen/sizeNormalText"
            android:textColor="@color/app_color"
            android:layout_marginBottom="10dp"
            android:focusable="true"
            android:focusableInTouchMode="true"/>

        <AutoCompleteTextView
            android:id="@+id/add_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_category"
            android:textColor="@color/app_color"
            android:textColorHint="#8022394a"
            android:completionThreshold="1"
            android:singleLine="true"
            android:imeOptions="actionDone"
            android:padding="5dp"
            android:layout_marginBottom="5dp"
            android:tag="0"
            android:background="@drawable/rectangle_box_products"/>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/buttons_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        style="?android:attr/buttonBarStyle"
        android:background="@color/app_color"
        android:gravity="center">

        <Button
            android:id="@+id/dialog_ok_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/ok"/>

        <Button
            android:id="@+id/dialog_cancel_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/cancel"/>
    </LinearLayout>

</LinearLayout>